--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Cabeçalho -->
     <header class="header__container">
       <div class="header__content">
-        <h1 class="header__title">MY TASKS</h1>
+        <h1 class="header__title">MINHAS TAREFAS</h1>
         <input
           class="header__input--search input__box"
           type="search"
@@ -29,15 +29,16 @@
     <main class="main__container">
       <!-- Formulário para adicionar nova task -->
       <form class="form__container">
-        <h2 class="form__title title2">Inserir tarefa</h2>
+        <h2 class="form__title title2">MY TASKS</h2>
         <div class="form__input-container">
           <input
             id="input_title"
             class="form__input--text input__box"
             type="text"
             placeholder="Digitar titulo da tarefa"
+            required
           />
-          <select class="form__input--priority input__box">
+          <select class="form__input--priority input__box" required >
             <option value="">Selecionar tipo</option>
             <option value="urgente">Urgente</option>
             <option value="importante">Importante</option>
